Customer and User service cleanup